// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preview create 1`] = `
<div class="weui-form-preview">
  <div class="weui-form-preview__hd"><label class="weui-form-preview__label"></label><em class="weui-form-preview__value"></em></div>
  <div class="weui-form-preview__bd"></div>
  <div class="weui-form-preview__ft"></div>
</div>
`;

exports[`preview render dataItems 1`] = `
<div class="weui-form-preview">
  <div class="weui-form-preview__hd"><label class="weui-form-preview__label"></label><em class="weui-form-preview__value"></em></div>
  <div class="weui-form-preview__bd">
    <div class="weui-form-preview__item"><label class="weui-form-preview__label">label1</label><span class="weui-form-preview__value">value1</span></div>
    <div class="weui-form-preview__item"><label class="weui-form-preview__label">label2</label><span class="weui-form-preview__value">value2</span></div>
    <div class="weui-form-preview__item"><label class="weui-form-preview__label">label3</label><span class="weui-form-preview__value">value3</span></div>
  </div>
  <div class="weui-form-preview__ft"></div>
</div>
`;

exports[`preview render title and value 1`] = `
<div class="weui-form-preview">
  <div class="weui-form-preview__hd"><label class="weui-form-preview__label">test-title</label><em class="weui-form-preview__value">test-value</em></div>
  <div class="weui-form-preview__bd"></div>
  <div class="weui-form-preview__ft"></div>
</div>
`;

exports[`preview test buttons 1`] = `
<div class="weui-form-preview">
  <div class="weui-form-preview__hd"><label class="weui-form-preview__label"></label><em class="weui-form-preview__value"></em></div>
  <div class="weui-form-preview__bd"></div>
  <div class="weui-form-preview__ft">
    <div class="weui-form-preview__btn weui-form-preview__btn_default">OK</div>
    <div class="weui-form-preview__btn weui-form-preview__btn_default">CANCEL</div>
  </div>
</div>
`;
